--- a/impact.html
+++ b/impact.html
@@ -29,14 +29,14 @@
     <!-- Start: Navbar Right Links (Dark) -->
     <nav class="navbar navbar-dark navbar-expand-md sticky-top bg-dark py-3">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse text-end" id="navcol-5" style="font-family: 'La Belle Aurore', serif;font-size: 24px;">
+            <div class="collapse navbar-collapse text-end" id="navcol-5" style="font-size: 24px;">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html" style="color: #fff;">Home</a></li>
-                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="color: #fff;">Projects</a>
-                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://scholar.wavedm.net" target="_blank">Scholar</a><a class="dropdown-item" href="https://cmc.wavedm.net" target="_blank">CMC</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a></div>
+                    <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="index.html" style="color: #fff;">Home</a></li>
+                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="rubberBand" href="#" style="color: #fff;">Projects</a>
+                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://scholar.wavedm.net" target="_blank">Scholar</a><a class="dropdown-item" href="https://cmc.wavedm.net" target="_blank">CMC</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a><a class="dropdown-item" href="webdesign.html">Web Design</a></div>
                     </li>
-                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="color: #fff;">More</a>
-                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank">Contact</a><a class="dropdown-item" href="privacy.html">Privacy</a></div>
+                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="rubberBand" href="#" style="color: #fff;">More</a>
+                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="privacy.html">Privacy</a></div>
                     </li>
                 </ul>
             </div>
@@ -62,7 +62,7 @@
         <!-- Start: Stats -->
         <div class="container py-4 py-xl-5">
             <div class="row gy-4 row-cols-2 row-cols-md-4 justify-content-center">
-                <div class="col" style="text-align: center;"><img src="assets/img/undraw_connected_world_wuay.png" style="width: 100%;"></div>
+                <div class="col" style="text-align: center;"><img src="assets/img/illustrations/undraw_connected_world_wuay.svg" style="width: 100%;"></div>
                 <div class="col text-start" style="color: var(--bs-dark);">
                     <div class="text-start d-flex flex-column py-3" style="color: var(--bs-dark);">
                         <p>Since 2019, we have been utilizing technology to spread God's Word. We utilize privacy respecting, anonymous technologies to record our impact.</p>
@@ -72,7 +72,7 @@
             <div class="row gy-4 row-cols-2 row-cols-md-4 justify-content-center">
                 <div class="col">
                     <div class="text-center d-flex flex-column justify-content-center align-items-center py-3">
-                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-devices" style="color: var(--bs-dark);">
+                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-devices" style="color: #087F81;">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <rect x="13" y="8" width="8" height="12" rx="1"></rect>
                                 <path d="M18 8v-3a1 1 0 0 0 -1 -1h-13a1 1 0 0 0 -1 1v12a1 1 0 0 0 1 1h9"></path>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="col" style="color: var(--bs-dark);">
                     <div class="text-center d-flex flex-column justify-content-center align-items-center py-3" style="color: var(--bs-dark);">
-                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg" style="color: var(--bs-dark);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-map-2" style="color: var(--bs-dark);">
+                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg" style="color: var(--bs-dark);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-map-2" style="color: #087F81;">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <line x1="18" y1="6" x2="18" y2="6.01"></line>
                                 <path d="M18 13l-3.5 -5a4 4 0 1 1 7 0l-3.5 5"></path>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="col" style="color: var(--bs-dark);">
                     <div class="text-center d-flex flex-column justify-content-center align-items-center py-3" style="color: var(--bs-dark);">
-                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg" style="color: var(--bs-dark);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-git-fork" style="color: var(--bs-dark);">
+                        <div class="bs-icon-xl bs-icon-circle d-flex flex-shrink-0 justify-content-center align-items-center d-inline-block mb-2 bs-icon lg" style="color: var(--bs-dark);"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-git-fork" style="color: #087F81;">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                 <circle cx="12" cy="18" r="2"></circle>
                                 <circle cx="7" cy="6" r="2"></circle>
@@ -111,13 +111,26 @@
                                 <line x1="12" y1="12" x2="12" y2="16"></line>
                             </svg></div>
                         <div class="px-3" style="color: var(--bs-dark);">
-                            <h2 class="fw-bold mb-0" style="color: var(--bs-dark);">9</h2>
+                            <h2 class="fw-bold mb-0" style="color: var(--bs-dark);">11</h2>
                             <p class="mb-0" style="color: var(--bs-dark);">Open source projects</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div><!-- End: Stats -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_map_dark_re_36sy.svg" width="50%"></p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Roadmap 2025</h3>
+                    <p>Our ministry is continuing to develop and grow, but we cannot proceed forward without and guide.</p>
+                    <p><a href="roadmap.html">Learn More</a></p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
         <div class="container h-100"></div>
     </section><!-- End: Hero Banner -->
     <!-- Start: Footer Dark -->
@@ -159,7 +172,7 @@
                             <path d="M18 9a5 5 0 0 0 -5 -5h-2a5 5 0 0 0 -5 5v6a5 5 0 0 0 5 5h2a5 5 0 0 0 5 -5v-2h-4"></path>
                         </svg></a></li>
             </ul>
-            <p class="text-muted mb-0">Copyright © 2022 Jacob Borg</p>
+            <p class="text-muted mb-0">Copyright © 2023 Jacob Borg</p>
         </div>
     </footer><!-- End: Footer Dark -->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
