--- a/webdesign.html
+++ b/webdesign.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="assets/css/styles.min.css">
-<script src="https://cdn.counter.dev/script.js" data-id="b5fa2081-bcb3-4ea6-bfd1-67fd41080622" data-utcoffset="-7"></script><script src="https://js.churchcenter.com/modal/v1"></script>
+<script src="https://cdn.counter.dev/script.js" data-id="b5fa2081-bcb3-4ea6-bfd1-67fd41080622" data-utcoffset="-7"></script>
 </head>
 
 <body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
@@ -42,12 +42,81 @@
             </div>
         </div>
     </nav><!-- End: Navbar Right Links (Dark) -->
-    <!-- Start: 1 Row 1 Column -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12"></div>
+    <!-- Start: Hero Parallax -->
+    <section>
+        <!-- Start: Parallax Background -->
+        <div style="height: 600px;background: url(&quot;assets/img/wave_bw.jpg&quot;) top / cover;">
+            <div class="container h-100">
+                <div class="row h-100">
+                    <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
+                        <div style="max-width: 350px;">
+                            <h1 class="text-uppercase fw-bold" style="font-family: Quicksand, sans-serif;"><strong><span style="color: inherit;">Web Design</span></strong></h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!-- End: Parallax Background -->
+    </section><!-- End: Hero Parallax -->
+    <!-- Start: Hero Banner -->
+    <section class="py-4 py-xl-5">
+        <!-- Start: 1 Row 1 Column -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_progressive_app_m-9-ms.svg" width="50%"></p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 1 Column -->
+        <!-- Start: 1 Row 1 Column -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="text-center">Your Ministry, no matter how small, needs a website.</h3>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 1 Column -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 30px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_server_cluster_jwwq(1).svg" width="50%"></p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Low-cost Hosting</h3>
+                    <p>We will find the best hosting service for your ministry to make sure its needs are met while keeping costs as low as possible.</p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_static_website_re_x70h(1).svg" width="50%"></p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Static Sites</h3>
+                    <p>Using the latest web technologies, we will build a custom static site just for you!</p>
+                    <p>Static sites are powerful, low-code websites with a wider range of hosting options.</p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_conversation_re_c26v.svg" width="50%"></p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Focus on ministering, we will handle the rest</h3>
+                    <p>When we develop a website, we can take care of everything. From domains, to hosting, to development. We will make sure it gets handled. (Domain management may carry additional fees)</p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <div class="container h-100">
+            <!-- Start: Apply - Disabled -->
+            <h3 class="text-center" style="margin-top: 50px;margin-bottom: 50px;">At this time we are not accepting applications for our web design services.</h3><!-- End: Apply - Disabled -->
         </div>
-    </div><!-- End: 1 Row 1 Column -->
+    </section><!-- End: Hero Banner -->
     <!-- Start: Footer Dark -->
     <footer class="text-center bg-dark">
         <div class="container text-white py-4 py-lg-5">
