--- a/ministrytools.html
+++ b/ministrytools.html
@@ -29,14 +29,14 @@
     <!-- Start: Navbar Right Links (Dark) -->
     <nav class="navbar navbar-dark navbar-expand-md sticky-top bg-dark py-3">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse text-end" id="navcol-5" style="font-family: 'La Belle Aurore', serif;font-size: 24px;">
+            <div class="collapse navbar-collapse text-end" id="navcol-5" style="font-size: 24px;">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html" style="color: #fff;">Home</a></li>
-                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="color: #fff;">Projects</a>
-                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://scholar.wavedm.net" target="_blank">Scholar</a><a class="dropdown-item" href="https://cmc.wavedm.net" target="_blank">CMC</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a></div>
+                    <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="index.html" style="color: #fff;">Home</a></li>
+                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="rubberBand" href="#" style="color: #fff;">Projects</a>
+                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://scholar.wavedm.net" target="_blank">Scholar</a><a class="dropdown-item" href="https://cmc.wavedm.net" target="_blank">CMC</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a><a class="dropdown-item" href="webdesign.html">Web Design</a></div>
                     </li>
-                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="color: #fff;">More</a>
-                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank">Contact</a><a class="dropdown-item" href="privacy.html">Privacy</a></div>
+                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="rubberBand" href="#" style="color: #fff;">More</a>
+                        <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="privacy.html">Privacy</a></div>
                     </li>
                 </ul>
             </div>
@@ -165,7 +165,7 @@
                             <path d="M18 9a5 5 0 0 0 -5 -5h-2a5 5 0 0 0 -5 5v6a5 5 0 0 0 5 5h2a5 5 0 0 0 5 -5v-2h-4"></path>
                         </svg></a></li>
             </ul>
-            <p class="text-muted mb-0">Copyright © 2022 Jacob Borg</p>
+            <p class="text-muted mb-0">Copyright © 2023 Jacob Borg</p>
         </div>
     </footer><!-- End: Footer Dark -->
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
