--- a/roadmap.html
+++ b/roadmap.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="assets/css/styles.min.css">
-<script src="https://cdn.counter.dev/script.js" data-id="b5fa2081-bcb3-4ea6-bfd1-67fd41080622" data-utcoffset="-7"></script><script src="https://js.churchcenter.com/modal/v1"></script>
+<script src="https://cdn.counter.dev/script.js" data-id="b5fa2081-bcb3-4ea6-bfd1-67fd41080622" data-utcoffset="-7"></script>
 </head>
 
 <body style="font-family: Quicksand, sans-serif;" onload="disableselect()">
@@ -42,12 +42,80 @@
             </div>
         </div>
     </nav><!-- End: Navbar Right Links (Dark) -->
-    <!-- Start: 1 Row 1 Column -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12"></div>
-        </div>
-    </div><!-- End: 1 Row 1 Column -->
+    <!-- Start: Hero Parallax -->
+    <section>
+        <!-- Start: Parallax Background -->
+        <div style="height: 600px;background: url(&quot;assets/img/wave_bw.jpg&quot;) top / cover;">
+            <div class="container h-100">
+                <div class="row h-100">
+                    <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
+                        <div style="max-width: 350px;">
+                            <h1 class="text-uppercase fw-bold" style="font-family: Quicksand, sans-serif;"><strong><span style="color: inherit;">Roadmap 2025</span></strong></h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!-- End: Parallax Background -->
+    </section><!-- End: Hero Parallax -->
+    <!-- Start: Hero Banner -->
+    <section class="py-4 py-xl-5">
+        <!-- Start: Stats -->
+        <div class="container py-4 py-xl-5">
+            <div class="row gy-4 row-cols-2 row-cols-md-4 justify-content-center">
+                <div class="col" style="text-align: center;"><img src="assets/img/illustrations/undraw_progressive_app_m-9-ms.svg" style="width: 100%;"></div>
+                <div class="col text-start" style="color: var(--bs-dark);">
+                    <div class="text-start d-flex flex-column py-3" style="color: var(--bs-dark);">
+                        <p>Our ministry is continuing to develop and grow, but we cannot proceed forward without and guide.</p>
+                    </div>
+                </div>
+            </div>
+        </div><!-- End: Stats -->
+        <!-- Start: 1 Row 1 Column -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3 class="text-center">By 2025 we plan to be...</h3>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 1 Column -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_server_cluster_jwwq(1).svg" width="50%"></p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Independently Hosted</h3>
+                    <p>By being independently hosted, we will be able to become more censorship resistant and offer a more compatible experience.</p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_surveillance_re_8tkl.svg" width="50%"></p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Standing up to Surveillance&nbsp;</h3>
+                    <p>A big issue that faces ministries these days is that the services available to them at a reduced cost, or free, have terrible privacy and mine the ministry's data. We have already found privacy respecting services for all of our mission critical systems, and we want to help other ministries do the same.</p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_adventure_re_ncqp.svg" width="50%"></p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Multi-lingual&nbsp;</h3>
+                    <p>As our team grows, we will offer content in more and more languages, not just English. We will also implement an automated translator for languages that we do not have content made for.</p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <div class="container h-100"></div>
+    </section><!-- End: Hero Banner -->
     <!-- Start: Footer Dark -->
     <footer class="text-center bg-dark">
         <div class="container text-white py-4 py-lg-5">
