--- a/impact.html
+++ b/impact.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-md-6">
                     <h3>Roadmap 2025</h3>
-                    <p>Our ministry is continuing to develop and grow, but we cannot proceed forward without and guide.</p>
+                    <p>Our ministry is continuing to develop and grow, but we cannot proceed forward without a guide.</p>
                     <p><a href="roadmap.html">Learn More</a></p>
                 </div>
             </div>
