--- a/impact.html
+++ b/impact.html
@@ -45,7 +45,7 @@
     <!-- Start: Hero Parallax -->
     <section>
         <!-- Start: Parallax Background -->
-        <div style="height: 600px;background: url(&quot;assets/img/wave_bw.jpg&quot;) top / cover;">
+        <div style="height: 600px;background: url(&quot;assets/img/earth.jpg&quot;) top / cover;">
             <div class="container h-100">
                 <div class="row h-100">
                     <div class="col-md-6 text-center text-md-start d-flex d-sm-flex d-md-flex justify-content-center align-items-center justify-content-md-start align-items-md-center justify-content-xl-center" style="color: #fff;">
