--- a/impact.html
+++ b/impact.html
@@ -31,11 +31,11 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span><img src="assets/img/wave4_w.png" style="width: 90px;"></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse text-end" id="navcol-5" style="font-size: 24px;">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" data-bss-hover-animate="rubberBand" href="index.html" style="color: #fff;">Home</a></li>
-                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="rubberBand" href="#" style="color: #fff;">Projects</a>
+                    <li class="nav-item"><a class="nav-link" data-bss-hover-animate="pulse" href="index.html" style="color: #fff;">Home</a></li>
+                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #fff;">Projects</a>
                         <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="https://courses.wavedm.net" target="_blank">Courses</a><a class="dropdown-item" href="ministryconnect.html">MinistryConnect</a><a class="dropdown-item" href="https://scholar.wavedm.net" target="_blank">Scholar</a><a class="dropdown-item" href="https://cmc.wavedm.net" target="_blank">CMC</a><a class="dropdown-item" href="https://act.wavedm.net" target="_blank">Act</a><a class="dropdown-item" href="webdesign.html">Web Design</a></div>
                     </li>
-                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="rubberBand" href="#" style="color: #fff;">More</a>
+                    <li class="nav-item dropdown"><a class="nav-link" aria-expanded="false" data-bs-toggle="dropdown" data-bss-hover-animate="pulse" href="#" style="color: #fff;">More</a>
                         <div class="dropdown-menu dropdown-menu-end" style="font-family: Quicksand, sans-serif;"><a class="dropdown-item" href="impact.html">Impact</a><a class="dropdown-item" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a><a class="dropdown-item" href="privacy.html">Privacy</a></div>
                     </li>
                 </ul>
@@ -79,7 +79,7 @@
                                 <line x1="16" y1="9" x2="18" y2="9"></line>
                             </svg></div>
                         <div class="px-3" style="color: var(--bs-dark);">
-                            <h2 class="fw-bold mb-0" style="color: var(--bs-dark);">155,138+</h2>
+                            <h2 class="fw-bold mb-0" style="color: var(--bs-dark);">155,578+</h2>
                             <p class="mb-0" style="color: var(--bs-dark);">Views</p>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                                 <line x1="15" y1="15" x2="15" y2="20"></line>
                             </svg></div>
                         <div class="px-3" style="color: var(--bs-dark);">
-                            <h2 class="fw-bold mb-0" style="color: var(--bs-dark);">16</h2>
+                            <h2 class="fw-bold mb-0" style="color: var(--bs-dark);">33</h2>
                             <p class="mb-0" style="color: var(--bs-dark);">Countries reached</p>
                         </div>
                     </div>
