--- a/impact.html
+++ b/impact.html
@@ -122,7 +122,43 @@
         <div class="container" style="margin-top: 15px;">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="text-center"><img src="assets/img/illustrations/undraw_map_dark_re_36sy.svg" width="50%"></p>
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_all_the_data_re_hh4w.svg" width="60%"></p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Views</h3>
+                    <p>Our ministry content is seen on our websites, social media pages, and blogs.&nbsp;</p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_adventure_re_ncqp.svg" width="60%"></p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Reach</h3>
+                    <p>Our content is reaching far across the oceans and reaching countries we could have never anticipated having the opportunity to reach.</p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_pair_programming_re_or4x.svg" width="60%"></p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Open Source</h3>
+                    <p>Every technology that we develop is open source. God has given us this opportunity to develop for Him, and we are not going to keep that hidden.</p>
+                </div>
+            </div>
+        </div><!-- End: 1 Row 2 Columns -->
+        <!-- Start: 1 Row 2 Columns -->
+        <div class="container" style="margin-top: 15px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-center"><img src="assets/img/illustrations/undraw_map_dark_re_36sy.svg" width="60%"></p>
                 </div>
                 <div class="col-md-6">
                     <h3>Roadmap 2025</h3>
