--- a/ministrytools.html
+++ b/ministrytools.html
@@ -50,7 +50,7 @@
             </div>
             <div class="col-md-6 d-md-flex align-items-md-center">
                 <div style="max-width: 350px;">
-                    <h2 class="text-uppercase fw-bold">MinistryTools</h2><sub>Beta</sub>
+                    <h2 class="text-uppercase fw-bold">MinistryTools</h2><sub>Alpha</sub>
                     <p class="my-3">Great tools for great ministries!</p>
                 </div>
             </div>
