--- a/ministryconnect.html
+++ b/ministryconnect.html
@@ -51,7 +51,7 @@
             <div class="col-md-6 d-md-flex align-items-md-center">
                 <div style="max-width: 350px;">
                     <h2 class="fw-bold" style="font-family: 'La Belle Aurore', serif;">MinistryConnect</h2>
-                    <p class="my-3">Lets connect you with the ministry that best suits you!</p>
+                    <p class="my-3">Connecting you with ministries</p>
                 </div>
             </div>
         </div>
