--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <ul class="list-inline">
                 <li class="list-inline-item me-4"><a class="link-light" href="index.html">Home</a></li>
                 <li class="list-inline-item me-4"><a class="link-light" href="privacy.html">Privacy</a></li>
-                <li class="list-inline-item"><a class="link-light" href="https://wavedm.churchcenter.com/people/forms/76551" target="_blank">Contact</a></li>
+                <li class="list-inline-item"><a class="link-light" href="https://tally.so/r/nW2DrP" target="_blank">Contact</a></li>
             </ul>
             <p class="text-center"><img src="assets/img/wave4_w.png" width="90px"></p>
             <ul class="list-inline" style="font-size: 25px;">
